--- a/index.html
+++ b/index.html
@@ -43,18 +43,7 @@
           scrollbar-width: none;  /* Firefox */
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0"
-  }
-}
-</script>
+    <script type="module" src="./index.tsx"></script>
 </head>
   <body class="bg-gray-50 text-gray-900 antialiased overflow-hidden">
     <div id="root"></div>
